Verify adding to wishlist, complete book object is included in DB
